Fix playlist-btn overflow, slight design tweaks

--- a/src/ui/components/Navigation/NavlistButton/NavlistButton.scss
+++ b/src/ui/components/Navigation/NavlistButton/NavlistButton.scss
@@ -1,6 +1,7 @@
 #container {
 	display: flex;
 	width: 100%;
+	height: 100%;
 }
 
 #lottie {
